I2PSnark: Fix screenlog overflow issue in midnight theme

--- a/installer/resources/themes/snark/midnight/snark.css
+++ b/installer/resources/themes/snark/midnight/snark.css
@@ -3501,6 +3501,7 @@ code, tt {
 
 .iframed .snarkMessages {
     margin-top: -6px;
+    margin-bottom: -1px;
 }
 
 .snarkMessages + form {
